--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-konva": "^18.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^4.2.0",
     "use-image": "^1.0.12",
     "web-vitals": "^2.1.4"
   },
